# console

./: .gitignore  Cargo.toml  Shuttle.toml
.sqlx/: query-1809f2230c44a5334c0e800646c6c0c1fe704befff13d34be4eae5823a298643.json  query-3dabe4e9ec7dbccc5e67d501a508de35440e5dab64ccf53df04cc89d1708a537.json  query-640d228e6a461b7728bb830663f09a4972cb983c62def7f15ef3ac35d1a7651a.json  query-79af3c94971b99ad9a2e87372e5a9a680fcf722792939994a8580eae269e3b74.json  query-83624d0e709070f1e8ab6c61ab81ebab024361d41580f888222f7bf09c35c857.json  query-af66ef6f939a721c297cf0ed8d02d2b0c4c8327c8727ccb14f45b81cf671578b.json
migrations/: 20240819045923_store_messages.sql  20240820155004_message_embeddings.sql  20240825022248_change_prompt_type.sql  20240826201138_add_users.sql
scripts/: watch.sh
src/: main.rs
src/middleware/: auth.rs
src/model/: chat.rs  graph.rs  message.rs  message_embedding.rs  mod.rs  user.rs
src/routes/: ai.rs  hello.rs  mod.rs
src/types/: ai.rs  graph.rs  mod.rs
src/utils/: config.rs  constants.rs  graph.rs  mod.rs
