[package]
name = "console"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0"
async-openai = "0.23.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
uuid = { version = "1.4.1", features = ["v4"] }
